[package]
name = "chartsapi-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
quick-xml = { version = "0.35.0", features = ["serialize"] }
reqwest = { version = "0.12.5" }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.86"
axum = "0.7.5"
indexmap = { version = "2.2.6", features = ["serde"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tower-http = { version = "0.5.2", features = ["trace"] }
chrono = "0.4.38"
