[package]
name = "chartsapi-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
quick-xml = { version = "0.37.0", features = ["serialize"] }
reqwest = { version = "0.12.9" }
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.92"
axum = "0.7.5"
indexmap = { version = "2.6.0", features = ["serde"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tower-http = { version = "0.6.1", features = ["trace", "fs"] }
chrono = "0.4.38"
